--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,82 @@
-/* You can add global styles to this file, and also import other style files */
+@import "scss/_variables.scss";
+@import "scss/_reset.scss";
+@import "scss/_placeholders.scss";
+@import "scss/_mixins.scss";
+//@import "~@ng-select/ng-select/themes/material.theme.css";
+
+input, textarea {
+  background-color: white;
+  border-radius: 6px;
+  padding: 10px;
+  outline: none;
+  border: none;
+  text-transform: uppercase;
+  margin: 7px 0;
+  font-size: 1rem;
+  //@include material-shaddow();
+}
+
+html, body {
+  height: 100%;
+  background-color: transparent;
+
+}
+
+//
+//input,
+//select,
+//textarea,
+//option,
+//button {
+//  padding: 10px 7px;
+//  font-size: 1rem;
+//  outline: none;
+//  border: 1px solid transparent;
+//  border-radius: 6px;
+//  text-transform: uppercase;
+//  background-color: white;
+//  width: 100%;
+//  @include quize-shaddow();
+//
+//  &:not(button) {
+//  }
+//
+//  &:read-only {
+//    background-color: lightgray;
+//  }
+//}
+
+
+button {
+  font-size: 2rem;
+  margin: 10px;
+  padding: 10px;
+  text-transform: uppercase;
+  background-color: darken(brown, 20%);
+  color: white;
+  font-weight: bold;
+  outline: none;
+  border-radius: 12px;
+  border: 4px solid darken(brown, 30%);
+  @include material-shaddow();
+  cursor: pointer;
+
+}
+
+h2 {
+  font-size: 1.3rem;
+}
+
+#freshwidget-button > a {
+  color: white !important;
+  border: none !important;
+  outline: none !important;
+  font-size: 1rem !important;
+  font-weight: normal;
+  border-radius: 12px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
+  @include quize-shaddow();
+}
+
+@import "scss/main.scss";
